@@ -87,9 +87,6 @@ index|[]
 name|array
 parameter_list|,
 name|int
-name|off
-parameter_list|,
-name|int
 name|len
 parameter_list|,
 name|int
@@ -122,8 +119,6 @@ init|=
 operator|(
 name|array
 index|[
-name|off
-operator|+
 name|i
 index|]
 operator|>>>
@@ -205,9 +200,6 @@ index|[]
 name|array
 parameter_list|,
 name|int
-name|off
-parameter_list|,
-name|int
 name|len
 parameter_list|,
 name|int
@@ -220,9 +212,6 @@ parameter_list|,
 name|int
 index|[]
 name|dest
-parameter_list|,
-name|int
-name|destOff
 parameter_list|)
 block|{
 for|for
@@ -246,8 +235,6 @@ name|v
 init|=
 name|array
 index|[
-name|off
-operator|+
 name|i
 index|]
 decl_stmt|;
@@ -265,8 +252,6 @@ literal|0xFF
 decl_stmt|;
 name|dest
 index|[
-name|destOff
-operator|+
 name|histogram
 index|[
 name|b
@@ -289,9 +274,6 @@ index|[]
 name|array
 parameter_list|,
 name|int
-name|off
-parameter_list|,
-name|int
 name|len
 parameter_list|,
 name|int
@@ -304,9 +286,6 @@ parameter_list|,
 name|int
 index|[]
 name|dest
-parameter_list|,
-name|int
-name|destOff
 parameter_list|)
 block|{
 name|Arrays
@@ -321,8 +300,6 @@ expr_stmt|;
 name|buildHistogram
 argument_list|(
 name|array
-argument_list|,
-name|off
 argument_list|,
 name|len
 argument_list|,
@@ -354,8 +331,6 @@ name|reorder
 argument_list|(
 name|array
 argument_list|,
-name|off
-argument_list|,
 name|len
 argument_list|,
 name|histogram
@@ -363,8 +338,6 @@ argument_list|,
 name|shift
 argument_list|,
 name|dest
-argument_list|,
-name|destOff
 argument_list|)
 expr_stmt|;
 return|return
@@ -478,18 +451,19 @@ block|}
 block|}
 block|}
 block|}
+comment|/** Sort {@code array[0:len]} in place.    * @param numBits how many bits are required to store any of the values in    *                {@code array[0:len]}. Pass {@code 32} if unknown. */
 DECL|method|sort
 specifier|public
 name|void
 name|sort
 parameter_list|(
+name|int
+name|numBits
+parameter_list|,
 specifier|final
 name|int
 index|[]
 name|array
-parameter_list|,
-name|int
-name|off
 parameter_list|,
 name|int
 name|len
@@ -506,7 +480,7 @@ name|insertionSort
 argument_list|(
 name|array
 argument_list|,
-name|off
+literal|0
 argument_list|,
 name|len
 argument_list|)
@@ -531,20 +505,10 @@ init|=
 name|array
 decl_stmt|;
 name|int
-name|arrOff
-init|=
-name|off
-decl_stmt|;
-name|int
 index|[]
 name|buf
 init|=
 name|buffer
-decl_stmt|;
-name|int
-name|bufOff
-init|=
-literal|0
 decl_stmt|;
 for|for
 control|(
@@ -554,8 +518,8 @@ init|=
 literal|0
 init|;
 name|shift
-operator|<=
-literal|24
+operator|<
+name|numBits
 condition|;
 name|shift
 operator|+=
@@ -568,8 +532,6 @@ name|sort
 argument_list|(
 name|arr
 argument_list|,
-name|arrOff
-argument_list|,
 name|len
 argument_list|,
 name|histogram
@@ -577,8 +539,6 @@ argument_list|,
 name|shift
 argument_list|,
 name|buf
-argument_list|,
-name|bufOff
 argument_list|)
 condition|)
 block|{
@@ -589,26 +549,13 @@ name|tmp
 init|=
 name|arr
 decl_stmt|;
-name|int
-name|tmpOff
-init|=
-name|arrOff
-decl_stmt|;
 name|arr
 operator|=
 name|buf
 expr_stmt|;
-name|arrOff
-operator|=
-name|bufOff
-expr_stmt|;
 name|buf
 operator|=
 name|tmp
-expr_stmt|;
-name|bufOff
-operator|=
-name|tmpOff
 expr_stmt|;
 block|}
 block|}
@@ -625,11 +572,11 @@ name|arraycopy
 argument_list|(
 name|arr
 argument_list|,
-name|arrOff
+literal|0
 argument_list|,
 name|array
 argument_list|,
-name|off
+literal|0
 argument_list|,
 name|len
 argument_list|)
