@@ -23,6 +23,21 @@ operator|.
 name|Arrays
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|packed
+operator|.
+name|PackedInts
+import|;
+end_import
 begin_class
 DECL|class|TestLSBRadixSorter
 specifier|public
@@ -58,17 +73,6 @@ operator|++
 name|iter
 control|)
 block|{
-name|int
-name|off
-init|=
-name|random
-argument_list|()
-operator|.
-name|nextInt
-argument_list|(
-literal|10
-argument_list|)
-decl_stmt|;
 specifier|final
 name|int
 name|len
@@ -92,8 +96,6 @@ init|=
 operator|new
 name|int
 index|[
-name|off
-operator|+
 name|len
 operator|+
 name|random
@@ -170,8 +172,6 @@ name|sorter
 argument_list|,
 name|arr
 argument_list|,
-name|off
-argument_list|,
 name|len
 argument_list|)
 expr_stmt|;
@@ -190,9 +190,6 @@ index|[]
 name|arr
 parameter_list|,
 name|int
-name|off
-parameter_list|,
-name|int
 name|len
 parameter_list|)
 block|{
@@ -203,14 +200,10 @@ name|expected
 init|=
 name|Arrays
 operator|.
-name|copyOfRange
+name|copyOf
 argument_list|(
 name|arr
 argument_list|,
-name|off
-argument_list|,
-name|off
-operator|+
 name|len
 argument_list|)
 decl_stmt|;
@@ -221,13 +214,77 @@ argument_list|(
 name|expected
 argument_list|)
 expr_stmt|;
+name|int
+name|numBits
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|len
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|numBits
+operator|=
+name|Math
+operator|.
+name|max
+argument_list|(
+name|numBits
+argument_list|,
+name|PackedInts
+operator|.
+name|bitsRequired
+argument_list|(
+name|arr
+index|[
+name|i
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|numBits
+operator|=
+name|TestUtil
+operator|.
+name|nextInt
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|numBits
+argument_list|,
+literal|32
+argument_list|)
+expr_stmt|;
+block|}
 name|sorter
 operator|.
 name|sort
 argument_list|(
-name|arr
+name|numBits
 argument_list|,
-name|off
+name|arr
 argument_list|,
 name|len
 argument_list|)
@@ -239,14 +296,10 @@ name|actual
 init|=
 name|Arrays
 operator|.
-name|copyOfRange
+name|copyOf
 argument_list|(
 name|arr
 argument_list|,
-name|off
-argument_list|,
-name|off
-operator|+
 name|len
 argument_list|)
 decl_stmt|;
@@ -418,20 +471,6 @@ expr_stmt|;
 block|}
 specifier|final
 name|int
-name|off
-init|=
-name|random
-argument_list|()
-operator|.
-name|nextInt
-argument_list|(
-name|arr
-operator|.
-name|length
-argument_list|)
-decl_stmt|;
-specifier|final
-name|int
 name|len
 init|=
 name|TestUtil
@@ -446,8 +485,6 @@ argument_list|,
 name|arr
 operator|.
 name|length
-operator|-
-name|off
 argument_list|)
 decl_stmt|;
 name|test
@@ -455,8 +492,6 @@ argument_list|(
 name|sorter
 argument_list|,
 name|arr
-argument_list|,
-name|off
 argument_list|,
 name|len
 argument_list|)
