@@ -72,19 +72,6 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|ArrayUtil
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
 name|BytesRef
 import|;
 end_import
@@ -124,7 +111,9 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|RamUsageEstimator
+name|packed
+operator|.
+name|PackedInts
 import|;
 end_import
 begin_comment
@@ -921,9 +910,16 @@ name|sorter
 operator|.
 name|sort
 argument_list|(
-name|buffer
+name|PackedInts
+operator|.
+name|bitsRequired
+argument_list|(
+name|maxDoc
+operator|-
+literal|1
+argument_list|)
 argument_list|,
-literal|0
+name|buffer
 argument_list|,
 name|pos
 argument_list|)
