@@ -78,6 +78,9 @@ Optimizations
 * LUCENE-7237: LRUQueryCache now prefers returning an uncached Scorer than
   waiting on a lock. (Adrien Grand)
 
+* LUCENE-7261: Speed up LSBRadixSorter (which is used by TermsQuery, multi-term
+  queries and point queries). (Adrien Grand)
+
 Bug Fixes
 
 * LUCENE-7127: Fix corner case bugs in GeoPointDistanceQuery. (Robert Muir)
